# enfle

./: .cvsignore  .gitignore  AUTHORS  COPYING.j  ChangeLog  Makefile.am  Makefile.in  NEWS  OpenDivX-LICENSE  README  README.e  README.jp  README.md  acinclude.m4  aclocal.m4  autogen.sh  common.h  compat.h  config.h.in  configure  configure.ac  configure.in  ltconfig.diff  ltmain.sh  mkinstalldirs
compat/: Makefile.am  fnmatch.c
lib/: Makefile.am  Makefile.in
lib/X11/: Makefile.am  Makefile.in  bgra32to16_mmx.asm  bgra32to16_mmx.s  rgbparse.c  rgbparse.h  x11.c  x11.h  x11window.c  x11window.h  x11ximage.c  x11ximage.h
lib/avcodec/: .cvsignore  8bps.c  Makefile.am  allcodecs.c  avcodec.c  avcodec.h  common.h  config.h  config.mak  dsputil.h  dv.c  error_resilience.c  faandct.c  fdctref.c  flac.c  h263.c  h264.c  integer.c  integer.h  mjpeg.c  motion_est.c  mpeg12.c  mpegaudiodec.c  mpegvideo.c  oggvorbis.c  pthread.c  rational.c  rational.h  smc.c  truemotion1.c  utils.c  vcodec_names.txt  vmdav.c  vp3.c
lib/avcodec/i386/: dsputil_mmx.c  idct_mmx_xvid.c  mpegvideo_mmx_template.c
lib/avcodec/ppc/: fdct_altivec.c  mpegvideo_ppc.c
lib/avutil/: Makefile.am  common.h  integer.c
lib/demultiplexer/: Makefile.am  demultiplexer.c  demultiplexer.h  demultiplexer_avi.c  demultiplexer_avi.h  demultiplexer_avi_private.h  demultiplexer_mpeg.c  demultiplexer_mpeg.h  demultiplexer_old.c  demultiplexer_old.h  demultiplexer_old_avi.c  demultiplexer_old_avi.h  demultiplexer_old_avi_private.h  demultiplexer_old_mpeg.c  demultiplexer_old_mpeg.h  libriff.c  libriff.h
lib/divxdecore/: Makefile.am  decore.c  decore.h  getbits.c  global.h  idct.c  idct_mmx.c  mp4_block.c  mp4_decoder.c  mp4_header.c  mp4_header.h  mp4_mblock.c  mp4_mblock.h  mp4_picture.c  mp4_predict.c  mp4_recon.c  mp4_vld.c  mp4_vld.h  portab.h  postprocess.c  postprocess.h  transferIDCT.c  transferIDCT_mmx.c  yuv2rgb.c  yuv2rgb.h  yuv2rgb_mmx.c
lib/dllloader/: Makefile.am  Makefile.in  advapi32.c  advapi32.h  borlndmm.c  borlndmm.h  export.h  kernel32.c  kernel32.h  mm.c  mm.h  module.c  module.h  msdmo.c  msdmo.h  msvcrt.c  msvcrt.h  pe.h  pe_image.c  pe_image.h  user32.c  user32.h  w32api.h  windef.h
lib/enfle/: Makefile.am  Makefile.in  archive.c  archive.h  archiver-extra.h  archiver-plugin.h  archiver.c  archiver.h  audio-plugin.h  audio.h  audiodecoder-plugin.h  audiodecoder.c  audiodecoder.h  cache_image.c  cache_image.h  demultiplexer-plugin.h  demultiplexer.c  demultiplexer.h  demultiplexer_bitmapinfoheader.h  demultiplexer_types.h  demultiplexer_waveformatex.h  dmo-private.h  dmo.c  dmo.h  effect-plugin.h  effect.c  effect.h  enfle-plugin.c  enfle-plugin.h  enfle-plugins.c  enfle-plugins.h  enfle-plugintype.h  fourcc.h  identify.c  identify.h  image.c  image.h  image_magnify.c  loader-extra.h  loader-plugin.h  (+35 more)
lib/j2k/: LICENSE  Makefile.am  Makefile.in  bio.c  bio.h  cio.c  cio.h  dwt.h  j2k.c  j2k.h  mqc.c  mqc.h  pi.c  pi.h  t1.c  t1.h  t2.c  t2.h  tcd.c  tcd.h  tgt.c  tgt.h
lib/mad/: CHANGES  CREDITS  Makefile.am  Makefile.in  README  TODO  audiodecoder_mad.c  bit.c  bit.h  config.h  decoder.c  decoder.h  fixed.c  fixed.h  frame.c  frame.h  global.h  huffman.c  huffman.h  imdct_l_arm.S  layer12.c  layer12.h  layer3.c  layer3.h  mad.h.sed  minimad.c  stream.c  stream.h  synth.c  synth.h  timer.c  timer.h  version.c  version.h
lib/mpeg2/: Makefile.am  alloc.c  attributes.h  cpu_accel.c  cpu_state.c  decode.c  header.c  header.h  idct.c  idct.h  idct_alpha.c  idct_altivec.c  idct_mlib.c  idct_mlib.h  idct_mmx.c  idct_mmx.h  mm_accel.h  mmx.h  motion_comp.c  motion_comp_alpha.c  motion_comp_altivec.c  motion_comp_mlib.c  motion_comp_mmx.c  motion_comp_vis.c  mpeg2.h  mpeg2_internal.h  slice.c  stats.c  video_out.c  video_out.h  video_out_internal.h  vlc.h  yuv2rgb.c  yuv2rgb.h  yuv2rgb_mlib.c  yuv2rgb_mmx.c
lib/mpglib/: Makefile.am  audiodecoder_mpglib.c  common.c  layer1.c  layer3.c  mpg123.h
lib/utils/: Makefile.am  Makefile.in  cache.c  cache.h  converter.c  converter.h  cpucaps.c  cpucaps.h  dlist.c  dlist.h  dlisttest.c  fifo.c  fifo.h  hash.c  hash.h  hashtest.c  libconfig.c  libconfig.h  libstring.c  libstring.h  misc.c  misc.h  plugin.c  plugin.h  pluginlist.c  pluginlist.h  stdio-support.c  stdio-support.h  timer.c  timer.h  timer_gettimeofday.c  timer_gettimeofday.h  timer_impl.h
plugins/archiver/arc/: Makefile.am  arc.c  url_enfle.c
plugins/archiver/rar/: Makefile.am  unrar.c
plugins/archiver/tar/: Makefile.am  Makefile.in  _tar.h  tar.c
plugins/audio/alsa/: Makefile.am  alsa.c
plugins/audio/esd/: Makefile.am  esd.c
plugins/audio/oss/: Makefile.am  Makefile.in  oss.c
plugins/audiodecoder/avcodec/: Makefile.am  avcodec.c
plugins/audiodecoder/mad/: Makefile.am  mad.c
plugins/audiodecoder/mpglib/: Makefile.am  mpglib.c
plugins/audiodecoder/vorbis/: Makefile.am  vorbis.c
plugins/player/: Makefile.am
plugins/player/avcodec/: Makefile.am  avcodec.c
plugins/player/avifile/: Makefile.am  avifile.cpp  aviplay_audio.h  aviplay_impl.h  config.h
plugins/player/divx/: Makefile.am  divx.c
plugins/player/generic/: Makefile.am  generic.c
plugins/player/libmpeg2/: Makefile.am  libmpeg2.c  libmpeg2_vo.c  libmpeg2_vo.h
plugins/player/libmpeg2.old/: Makefile.am  libmpeg2.c  libmpeg2_vo.c  libmpeg2_vo.h
plugins/player/libmpeg3/: Makefile.am  libmpeg3.c
plugins/player/mng/: Makefile.am  mng.c
plugins/player/mpeg_lib/: Makefile.am  mpeg_lib.c
plugins/player/mpglib/: Makefile.am  mpglib.c
plugins/player/opendivx/: Makefile.am  avcodec.c  divx.c  libavi.c  libavi.h  libriff.c  libriff.h  opendivx.c  yuv2rgb.c
plugins/player/ungif/: Makefile.am  ungif.c
plugins/saver/: Makefile.am
plugins/saver/glic/: ChangeLog  Makefile.am  arithcoder.h  arithcoder_arith.c  arithcoder_arith.h  arithcoder_range.c  arithcoder_range.h  arithio.h  arithio_filechar.c  arithio_filechar.h  arithmodel.h  arithmodel_order_zero.c  arithmodel_order_zero.h  arithmodel_utils.c  arithmodel_utils.h  expand.c  (+45 more)
src/: Makefile.am  Makefile.in  enfle.c  enfle.rc  getopt-support.c  getopt-support.h
(+112 files in other folders)
