## Process this file with automake to produce Makefile.in
# Makefile.am for enfle
# Last Modified: Sun Jun 23 16:11:11 2002.
# $Id: Makefile.am,v 1.8 2002/07/31 13:47:56 sian Exp $

SUBDIRS = compat lib plugins src
ACLOCAL_AMFLAGS = -I macros

EXTRA_DIST = COPYING.j OpenDivX-LICENSE README.e common.h compat.h macros
