## Process this file with automake to produce Makefile.in
# Makefile.am for enfle
# Last Modified: Sun Dec  7 02:13:23 2003.
# $Id: Makefile.am,v 1.9 2003/12/08 01:44:27 sian Exp $

SUBDIRS = compat lib plugins src
# Newer libtool have icc support
#ACLOCAL_AMFLAGS = -I macros

EXTRA_DIST = COPYING.j OpenDivX-LICENSE README.e common.h compat.h macros
