## Process this file with automake to produce Makefile.in
# Makefile.am for enfle
# Last Modified: Tue Dec 30 03:24:05 2003.
# $Id: Makefile.am,v 1.10 2003/12/29 18:24:22 sian Exp $

SUBDIRS = compat lib plugins src
# Newer libtool have icc support
#ACLOCAL_AMFLAGS = -I macros

EXTRA_DIST = COPYING.j README.e common.h compat.h macros
